Fix #3 for iphone layout issues

--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ main {
 /* About */
 #about {
   margin-top: clamp(4rem, 15vw, 10rem);
+  text-align: center;
 }
 
 #about h2 {
